force-app/main/default/objects/Note__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Loan Officer Assistant</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>